<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/pd_base_floor_padding"
    android:paddingTop="@dimen/pd_base_floor_padding"
    android:paddingRight="@dimen/pd_base_floor_padding">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pd_base_floor_title_promo"
        android:textColor="?attr/isv_color_C5"
        android:textSize="?attr/isv_font_size_T8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/pd_base_floor_icon_more"
        android:textColor="?attr/isv_color_C5"
        android:textSize="?attr/isv_font_size_T9"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/couponsLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="12dp"
        android:orientation="horizontal"
        android:paddingBottom="18dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/title"
        app:layout_constraintRight_toLeftOf="@+id/more"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tag"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_centerVertical="true"
            android:background="@drawable/pd_base_floor_bg_promo_tag"
            android:gravity="center"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/pd_base_floor_tag_promo_coupon"
            android:textColor="?attr/isv_color_C10_d"
            android:textSize="?attr/isv_font_size_T9" />

        <com.github.floormanager.widget.TagFlowLayout
            android:id="@+id/coupons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/promos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="12dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/title"
        app:layout_constraintRight_toLeftOf="@+id/more"
        app:layout_constraintTop_toBottomOf="@+id/couponsLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>