<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/pd_base_floor_padding"
    android:paddingBottom="@dimen/pd_base_floor_padding">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pd_base_floor_padding"
        android:paddingTop="1dp"
        android:text="@string/pd_base_floor_title_address"
        android:textColor="?attr/isv_color_C5"
        android:textSize="?attr/isv_font_size_T8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginRight="@dimen/pd_base_floor_padding"
        android:text="@string/pd_base_floor_icon_more"
        android:textColor="?attr/isv_color_C5"
        android:textSize="?attr/isv_font_size_T9"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/selectedAddressTextIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/pd_base_floor_padding"
        android:layout_marginTop="@dimen/pd_base_floor_padding"
        android:text="@string/pd_base_floor_icon_location"
        android:textColor="?attr/isv_color_C9"
        android:textSize="?attr/isv_font_size_T7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/title"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/selectedAddressText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="@dimen/pd_base_floor_padding"
        android:layout_marginRight="12dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="?attr/isv_color_C7"
        android:textSize="?attr/isv_font_size_T7"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/selectedAddressTextIcon"
        app:layout_constraintRight_toLeftOf="@+id/more"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1px"
        android:background="?attr/isv_color_C2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/selectedAddressText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>