<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:layout_marginLeft="14.5dp"
        android:src="@drawable/pd_base_floor_bg_shop_icon_shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginRight="18dp"
        android:text="@string/pd_base_floor_btn_shop"
        android:textColor="?attr/isv_color_C5"
        android:textSize="?attr/isv_font_size_T9"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="12dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="?attr/isv_color_C7"
        android:textSize="?attr/isv_font_size_T6"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/icon"
        app:layout_constraintRight_toLeftOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/like"
        style="?attr/isv_button_B19"
        android:layout_width="72dp"
        android:layout_height="32dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/pd_base_floor_btn_shop_like"
        app:layout_constraintLeft_toLeftOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/service"
        style="?attr/isv_button_B19"
        android:layout_width="72dp"
        android:layout_height="32dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/pd_base_floor_btn_shop_service"
        app:layout_constraintLeft_toRightOf="@+id/like"
        app:layout_constraintTop_toBottomOf="@+id/name" />

</androidx.constraintlayout.widget.ConstraintLayout>